[gd_scene load_steps=7 format=3 uid="uid://ip53u2prkaac"]

[ext_resource type="Texture2D" uid="uid://dbe01wcsofdai" path="res://Assets/ForestPlaceHolder.jpg" id="1_46rwr"]
[ext_resource type="Script" uid="uid://b05pkqyn4ivhb" path="res://Scripts/main_menu.gd" id="1_h22u5"]
[ext_resource type="Theme" uid="uid://c8560h7tc0b1e" path="res://Resource/MenuButton.tres" id="2_b0atw"]
[ext_resource type="AudioStream" uid="uid://bq5nc3va500s1" path="res://Assets/MUSIC/CrrepyHolderMusic.mp3" id="4_ce3w2"]
[ext_resource type="AudioStream" uid="uid://bx7ask5u72yed" path="res://Assets/SFX/MenuSFX1.wav" id="5_n45e2"]
[ext_resource type="AudioStream" uid="uid://ced6t8eamngt5" path="res://Assets/SFX/MenuSFX2.wav" id="6_opfnp"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h22u5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_46rwr")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.032
anchor_top = 0.386
anchor_right = 0.4
anchor_bottom = 0.663
offset_top = 3.78397
offset_right = -1.16003
grow_vertical = 2
theme_override_constants/separation = 14

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Quit")
theme = ExtResource("2_b0atw")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "PLAY"
alignment = 0

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_b0atw")
text = "OPTIONS"
alignment = 0

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_bottom = NodePath("../Play")
theme = ExtResource("2_b0atw")
text = "QUIT"
alignment = 0

[node name="SpookyMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ce3w2")
bus = &"MainMenu"

[node name="MenuSFX1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_n45e2")
bus = &"SFX"

[node name="MenuSFX2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_opfnp")
volume_db = 7.839
pitch_scale = 0.7
bus = &"SFX"

[connection signal="mouse_entered" from="VBoxContainer/Play" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Options" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/Options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Quit" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
